ensure our filter select box does not overflow on resize

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -54,3 +54,7 @@ code {
   @extend .govuk-main-wrapper;
   padding-top: govuk-spacing(3);
 }
+
+.moj-filter .govuk-select {
+  min-width: 5.5em;
+}
